# fraud-detection-service

./: LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: publish.yml
data-pipeline/: .gitignore  Makefile  README.md  pyproject.toml
data-pipeline/data_pipeline/: constants.py  download.py  logger.py  transform.py  validate.py
data-pipeline/data_pipeline/s3/: __init__.py  base.py  read.py  write.py
data-pipeline/tests/: test_transformers.py
docs/: Product & System Design.md
feature-store/: pyproject.toml
feature-store/feature_store/: Dockerfile
images/: fraud_detection_system.drawio  fraud_ml_system.drawio  inference_pipeline.drawio
infra/: README.md  main.tf  version.tf
infra/base/: base.tf
infra/iam/: iam.tf
kafka/: Dockerfile
services/feature-store/: Dockerfile  README.md  pyproject.toml
services/feature-store/feature_store/: entities.py  feature_store.yaml  features.py  sources.py
services/feature-transformer/: Dockerfile  pyproject.toml
services/feature-transformer/scripts/: run.sh
services/feature-transformer/transformer/: logger.py  main.py
services/kafka-producer/: Dockerfile  README.md  pyproject.toml  run.sh
services/kafka-producer/producer/: main.py  stream.py
