[project]
name = "data-pipeline"
version = "0.1.0"
description = "Data pipeline package for processing data in fraud detection system"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "polars>=1.19.0",
    "rich>=13.9.4",
    "s3fs>=2024.12.0",
]
