[project]
name = "data-pipeline"
version = "0.2.0"
description = "Data pipeline package for processing data in fraud detection system"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ipykernel>=6.29.5",
    "kaggle>=1.6.17",
    "pandera[polars]>=0.22.1",
    "polars>=1.19.0",
    "pydantic-settings>=2.7.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "s3fs>=2024.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_pipeline"]
